fixed gaps between bets

--- a/app/assets/stylesheets/bets.scss
+++ b/app/assets/stylesheets/bets.scss
@@ -2,11 +2,19 @@
   height: 100%;
 }
 
+.bet .input-group, .bet .radio {
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .bet .input-group {
   bottom: 0;
+  left: 20px;
   position: absolute;
 }
 
 .preview-amount {
   min-width: 75px;
 }
+
